updated the invetory page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Klasik Plus ERP</h1>
+    <h2>Login</h2>
     <form onsubmit="redirectToHome(event)">
       <input type="text" placeholder="Username" required>
       <input type="password" placeholder="Password" required>
@@ -16,12 +17,25 @@
     </form>
 
     <script>
-    function redirectToHome(event) {
-      event.preventDefault();
-      window.location.href = "home.html";
-    }
-  </script>
+      // Inventory data
+      const inventoryData = [
+        { id: 1, name: "Laptop", category: "Electronics", quantity: 12, price: 899, location: "Warehouse A", threshold: 10 },
+        { id: 2, name: "Office Chair", category: "Furniture", quantity: 30, price: 120, location: "Warehouse B", threshold: 15 },
+        { id: 3, name: "Keyboard", category: "Electronics", quantity: 45, price: 25, location: "Warehouse A", threshold: 20 },
+        { id: 4, name: "Printer Paper (500 sheets)", category: "Office Supplies", quantity: 80, price: 10, location: "Warehouse C", threshold: 50 },
+        { id: 5, name: "Desk Lamp", category: "Furniture", quantity: 20, price: 35, location: "Warehouse B", threshold: 10 }
+      ];
 
+      function redirectToHome(event) {
+        event.preventDefault();
+
+        // Save inventory data to local storage
+        localStorage.setItem('inventory', JSON.stringify(inventoryData));
+
+        // Redirect to home page
+        window.location.href = "home.html";
+      }
+    </script>
 </body>
 
 </html>
