--- a/purchasing.html
+++ b/purchasing.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Klasik Plus ERP</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -19,13 +20,16 @@
 
   <h3>Add to Pending Order</h3>
 
-  <label>Select Product: 
+  <div class="pending-form">
+  <label>Select Product: </label><br><br>
     <select id="productSelect"></select>
-  </label><br><br>
+  <br><br>
 
-  <label>Quantity: 
+  <label>Quantity: </label><br><br>
     <input type="number" id="addQty" required>
-  </label><br><br>
+  <br><br>
+  </div>
+
 
   <button onclick="addPending()">Add to Pending</button>
 
