required removed on from login page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Klasik Plus ERP</h1>
     <h2>Login</h2>
     <form onsubmit="redirectToHome(event)">
-      <input type="text" placeholder="Username" required>
-      <input type="password" placeholder="Password" required>
+      <input type="text" placeholder="Username">
+      <input type="password" placeholder="Password">
       <button type="submit">Submit</button>
     </form>
 
