--- a/index.html
+++ b/index.html
@@ -2,41 +2,42 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Klasik Plus ERP</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Klasik Plus ERP</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Klasik Plus ERP</h1>
-    <h2>Login</h2>
-    <form onsubmit="redirectToHome(event)">
-      <input type="text" placeholder="Username">
-      <input type="password" placeholder="Password">
-      <button type="submit">Submit</button>
-    </form>
+  <h1>Klasik Plus ERP</h1>
+  <h2>Login</h2>
+  <form onsubmit="redirectToHome(event)">
+    <input type="text" placeholder="Username">
+    <input type="password" placeholder="Password">
+    <button type="submit">Submit</button>
+  </form>
 
-    <script>
-      // Inventory data
-      const inventoryData = [
-        { id: 1, name: "Laptop", category: "Electronics", quantity: 12, price: 899, location: "Warehouse A", threshold: 10 },
-        { id: 2, name: "Office Chair", category: "Furniture", quantity: 30, price: 120, location: "Warehouse B", threshold: 15 },
-        { id: 3, name: "Keyboard", category: "Electronics", quantity: 45, price: 25, location: "Warehouse A", threshold: 20 },
-        { id: 4, name: "Printer Paper (500 sheets)", category: "Office Supplies", quantity: 80, price: 10, location: "Warehouse C", threshold: 50 },
-        { id: 5, name: "Desk Lamp", category: "Furniture", quantity: 20, price: 35, location: "Warehouse B", threshold: 10 }
-      ];
+  <script>
+    // Inventory data
+    const inventoryData = [
+      { id: 1, name: "Apples", category: "Fruit", quantity: 120, price: 2.5, location: "A", threshold: 50 },
+      { id: 2, name: "Carrots", category: "Vegetables", quantity: 200, price: 1.2, location: "B", threshold: 80 },
+      { id: 3, name: "Bananas", category: "Fruit", quantity: 150, price: 1.8, location: "A", threshold: 60 },
+      { id: 4, name: "Tomatoes", category: "Vegetables", quantity: 90, price: 2.0, location: "C", threshold: 40 },
+      { id: 5, name: "Lettuce", category: "Vegetables", quantity: 70, price: 1.5, location: "B", threshold: 30 }
+    ];
 
-      function redirectToHome(event) {
-        event.preventDefault();
 
-        // Save inventory data to local storage
-        localStorage.setItem('inventory', JSON.stringify(inventoryData));
+    function redirectToHome(event) {
+      event.preventDefault();
 
-        // Redirect to home page
-        window.location.href = "home.html";
-      }
-    </script>
+      // Save inventory data to local storage
+      localStorage.setItem('inventory', JSON.stringify(inventoryData));
+
+      // Redirect to home page
+      window.location.href = "home.html";
+    }
+  </script>
 </body>
 
 </html>
